sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:17: error: not found: value nb
         test = plusPetit(nb Valeurs -2-i,nbValeurs-1-i)
                          ^